# test_sw_ui

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml.bak  version.xml
log/: latest_list
react_ui/: package-lock.json  package.json  vite.config.js  wrapper.html
react_ui/data/: swarm.json
react_ui/public/plugins/jquery-ui/: package.json
react_ui/src/: App.jsx  main.jsx
react_ui/src/api/: FetchApi.jsx
react_ui/src/components/: FarButton.jsx  FlowTriggerModal.jsx  LiveInfoLog.jsx  LogCollapsibleCard2.jsx  Notifications.css  Notifications.jsx  PrintOutWindow.jsx  Section.jsx  SideNavBar.jsx  TopNavBar.jsx  WrapperServicesBox.jsx
react_ui/src/components/Dashboard/: ArtifactCard.jsx  ArtifactCarousel.css  ArtifactCarousel.jsx  ArtifactsOptionModal.jsx  CreateWrapperModal.jsx  SearchBox.jsx  WrapperItem.jsx  WrapperList.jsx
react_ui/src/components/Editor/: BuildMessageLog.jsx  CodeEditorPane.jsx  CommunicationSettingModal.jsx  ConfigParamPane.jsx  ConfigParamRow.jsx  ConfigParamRowSample.jsx  FolderTreeView.jsx  ImageCrop.css  ImageCrop.jsx  ImageUploadBox.jsx  ImageUploadPane.jsx  ImportWrapperModal.jsx  LastBuildInfoLog.jsx  LogCollapsibleCard.jsx  MappingParamPane.jsx  MappingParamRow.jsx  MappingTagParamRow.jsx  ServiceParamPane.jsx  ServiceParamRow.jsx  UploadImageHolder.css  UploadImageHolder.jsx
react_ui/src/data/: sdk.treeview.json
react_ui/src/hooks/: FetchHooks.jsx
react_ui/src/pages/: SdkDashboard.jsx  SdkEditor.jsx  SdkTesting.jsx
react_ui/src/stories/: ConfigParamRowSample.stories.jsx  FarButton.stories.jsx
react_ui/src/utils/: Crop.jsx  TokenContextProvider.jsx
ros_mocks_ws/: dump.rdb
ros_mocks_ws/src/cpp_action/: CMakeLists.txt  package.xml
ros_mocks_ws/src/cpp_action/src/: fibonacci_action_server.cpp
ros_mocks_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros_mocks_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros_mocks_ws/src/cpp_pubsub/src/: amr_detection_mock.cpp  flow_mock.cpp  mini_client.cpp  mini_publisher.cpp  mini_service.cpp  mini_subscriber.cpp
ros_mocks_ws/src/logging_core/: CMakeLists.txt
ros_mocks_ws/src/logging_core/launch/: logging_core.launch.py
ros_mocks_ws/src/logging_core/src/: logging_core.cpp  logging_core.hpp
ros_mocks_ws/src/mock_swarm/: CMakeLists.txt  package.xml
ros_mocks_ws/src/mock_swarm/src/: mock_gmapping.cpp  mock_plan.cpp
ros_mocks_ws/src/py_pubsub/: dump.rdb  module.json  package.xml  setup.py
ros_mocks_ws/src/py_pubsub/py_pubsub/: db_logger_trial.py  ex_publisher.py  ex_subscriber.py  mock_ros_node_pub.py  publisher_message_queue.py  subscriber_member_function.py
ros_mocks_ws/src/ui_comm/: CMakeLists.txt  package.xml
ros_mocks_ws/src/ui_comm/msg/: TaskState.msg  TaskSummary.msg  UiRequest.msg  UiResponse.msg
ros_mocks_ws/src/ui_comm/srv/: ReqRes.srv
server/: .eslintrc.json  .license.lic.swo  .license.lic.swp  app.js  ecosystem.config.js  email_conf.yaml  farobottech.db  get-version.sh  package-lock.json  package.json  package_exe.sh  pkg.config.json  settings.json  swagger.config.js  version.json
server/config/: default.json
server/locales/: en.json  zh.json  zht.json
server/mobile_views/: reset-password.ejs
server/public/: fleet.html  forgot-password.html  index.html  log.html  login.html  manage_user.html  map.html  map_legacy_0316.html  map_live.html  operation.html  operation_bk.html  operation_floweditor.html  role.html  settings2.html  settings_lic.html  slam.html  task_schedule.html  test_swarm.html  user_settings.html  wrapper.html  wrapper_dev.html  wrapper_sdk.html
server/public/assets/: main.03e07ba5.js  main.186c34de.js  main.1cf9c508.js  main.8a041ccf.js  main.8b49bba3.js  main.bd9a12d1.js  main.cc3e8bbd.js  main.e65af8ec.js  main.f03289aa.js  wrapper.4d572e98.css  wrapper.fe804a9d.css
server/public/mobile_html/: fleet.html  forgot-password.html  index.html  log.html  login.html  manage_user.html  map.html  map_live.html  operation.html  role.html  settings2.html  settings_lic.html  slam.html  task_schedule.html
server/public/plugins/daterangepicker/: package.json
server/public/plugins/fullcalendar/: package.json
server/public/plugins/fullcalendar-bootstrap/: package.json
server/public/plugins/fullcalendar-daygrid/: package.json
server/public/plugins/fullcalendar-interaction/: package.json
server/public/plugins/fullcalendar-timegrid/: package.json
server/public/plugins/icheck-bootstrap/: package.json
server/public/plugins/ion-rangeslider/: package.json
server/public/plugins/jquery-mousewheel/: package.json
server/public/plugins/raphael/: package.json
server/public/plugins/sweetalert2-theme-bootstrap-4/: package.json
server/public/views/: manual_trigger_modal.html
server/public/views/legacy/: index_prev.html  (+5 more)
server/routes/: api_gateway.js  index.js  ros_routes.js  testdb.js
server/services/: line-notifier.js  log-manager.js  print-message.js  worker.js  ws-comm.js
server/services/mock_cli/: README.md  artifact_sdk_cli.py
server/uploads/: mock_license.lic
server/views/: reset-password.ejs
tests/: .testcaferc.json  deploy_test_settings.json  jest-puppeteer.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  test_settings.json  util.js
tests/e2e/: 00_ComboCase_scene.test.js  00_ComboCase_smrui_mode.test.js  00_ComboCase_user.test.js  00_auto_deploy_role.test.js  01_Dashboard_flow.test.js  02_LiveMap_cell_status.test.js  03_FleetConf_agent.test.js  03_FleetConf_fleet.test.js  04_FlowConf_flow.test.js  06_MapEditor_cell.test.js  06_MapEditor_cell_status.test.js  06_MapEditor_functiontype.test.js  06_MapEditor_route.test.js  07_RoleEditor_role.test.js  08_SystemSettings_swarmcore.test.js  09_Log_download.test.js  10_UserManagement_usercd.test.js  cross_site_test.test.js
tests/e2e_legacy/: cell_edit.spec.js  connection.spec.js  login.spec.js  map.spec.js  map_editor.spec.js
tests/fixtures/: mock_data_source.js  mock_map_data.js  mock_user_data.js
tests/models/: LoginModel.js  RoleModel.js
tests/unit/: far_map.test.js  far_utilities.test.js
(+13 files in other folders)
