<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_swarm</name>
  <version>0.0.2</version>
  <description>mock swarm testing project</description>
  <maintainer email="john.wu@farobottech.com">farobot</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>nlohmann_json</exec_depend>
  <depend>ui_comm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
